[gd_scene load_steps=4 format=3 uid="uid://rwevsxii8o6c"]

[ext_resource type="Script" path="res://scenes/mainscreen_logic.gd" id="1_amdr8"]
[ext_resource type="Texture2D" uid="uid://lo6hwmoweb80" path="res://material/vgui/ui/placeholder_splash.png" id="1_onetg"]
[ext_resource type="FontFile" uid="uid://dceo4b8s3y2tt" path="res://resources/ui/fonts/Neou-Bold.ttf" id="3_pnq5d"]

[node name="mainscreen" type="Node2D"]
script = ExtResource("1_amdr8")
level_name = "mainscreen"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="OverlayLayer" type="CanvasLayer" parent="Control"]
layer = 10

[node name="Overlay" type="ColorRect" parent="Control/OverlayLayer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -929.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 1, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="CanvasModulate" type="CanvasModulate" parent="Control/CanvasLayer"]

[node name="TextureRect" type="TextureRect" parent="Control/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_onetg")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CanvasLayer"]
offset_left = 78.0
offset_top = 648.0
offset_right = 118.0
offset_bottom = 688.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="title" type="Label" parent="Control/CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_pnq5d")
theme_override_font_sizes/font_size = 100
text = "FOGHORN"

[node name="playButton" type="Button" parent="Control/CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "lock and load"
theme_override_fonts/font = ExtResource("3_pnq5d")
theme_override_font_sizes/font_size = 29
text = "start session"
alignment = 0

[node name="optionsbutton" type="Button" parent="Control/CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "change settings/preferences/keymaps"
theme_override_fonts/font = ExtResource("3_pnq5d")
theme_override_font_sizes/font_size = 29
text = "options"
alignment = 0

[node name="quitButton" type="Button" parent="Control/CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Exit the game"
theme_override_fonts/font = ExtResource("3_pnq5d")
theme_override_font_sizes/font_size = 29
text = "exit"
alignment = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="versioning" type="Label" parent="Control/CanvasLayer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "alpha 1.0.0"

[connection signal="pressed" from="Control/CanvasLayer/HBoxContainer/VBoxContainer/playButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Control/CanvasLayer/HBoxContainer/VBoxContainer/optionsbutton" to="." method="_on_optionsbutton_pressed"]
[connection signal="pressed" from="Control/CanvasLayer/HBoxContainer/VBoxContainer/quitButton" to="." method="_on_quit_button_pressed"]
